transformed to portfolio

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-project",
+  "name": "sebastien-rocks",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "",
   "author": "",
   "private": true,
   "scripts": {
